force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/LLC_BI__Online_Banking_Service__c.object-meta.xml
<CustomObject>
    <description>This object is ancillary with a one-to-one lookup with the Treasury object and is used to store fields specific to online banking services.</description>
    <label>Online Banking Service</label>
    <nameField>
        <displayFormat>O-{000000000}</displayFormat>
        <label>Online Banking Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Banking Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>