force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__Automated_Scheduling_Software__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Automated_Scheduling_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Scheduling Software</label>
    <type>Checkbox</type>
</CustomField>