force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__Date_of_Activation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_of_Activation__c</fullName>
    <label>Date of Activation</label>
    <type>Date</type>
</CustomField>