force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__Expiration_Date_Date_of_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expiration_Date_Date_of_Next_Review__c</fullName>
    <label>Expiration Date/Date of Next Review</label>
    <type>Date</type>
</CustomField>