force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__One_Time_Passcode__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__One_Time_Passcode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Passcode</label>
    <type>Checkbox</type>
</CustomField>