force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__Online_Banking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Online_Banking_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox field to enable online banking capabilities in the Deposit Maintenance workflow.</description>
    <inlineHelpText>Select the checkbox to enable this online banking capability in the Deposit Maintenance workflow.</inlineHelpText>
    <label>Online Banking Enabled</label>
    <type>Checkbox</type>
</CustomField>