force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__Online_Banking_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Online_Banking_ID__c</fullName>
    <description>The system automatically populates this text field to store the unique online ID that is associated to the customer.</description>
    <inlineHelpText>Enter the unique online ID associated to the customer.</inlineHelpText>
    <label>Online Banking ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>