force-app/main/default/objects/LLC_BI__Online_Banking_Service__c/fields/LLC_BI__Scheduling_Software_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scheduling_Software_Description__c</fullName>
    <label>Scheduling Software Description</label>
    <type>TextArea</type>
</CustomField>